--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.5.2768"
+    version = "1.12.2-14.23.4.2705"
     runDir = "run"
 
     replace "@ALLOWED_VERSIONS@", "[5.5.2,5.5.3)"
@@ -32,7 +32,7 @@ minecraft {
     replace "@VERSION_APOCALYPSE@", project.apocalypseVersion
     replaceIn "FlansModApocalypse.java"
 
-    mappings = "stable_39"
+    mappings = "snapshot_20171003"
 }
 
 processResources {
